# python-study

./: .gitignore  Makefile  README.md
advent_of_code/2020/day01/: main.py
advent_of_code/2020/day02/: main.py
advent_of_code/2020/day03/: main.py
advent_of_code/2020/day04/: main.py
django_book01/: README.md  docker-compose.yml  requirements.txt
django_book01/private_diary/diary/: forms.py  urls.py  views.py
django_book01/private_diary/diary/templates/: base.html  index.html  inquiry.html
django_book01/private_diary/private_diary/: settings.py  settings_common.py  settings_dev.py  urls.py
django_girls_tutorial/: .gitignore
django_girls_tutorial/blog/: views.py
django_girls_tutorial/blog/migrations/: 0001_initial.py
django_girls_tutorial/blog/static/css/: blog.css
django_girls_tutorial/blog/templates/blog/: base.html  post_detail.html  post_edit.html  post_list.html
django_girls_tutorial/mysite/: settings.py  urls.py
fastapi001/: pyproject.toml
fastapi002/: Makefile  README.md  pyproject.toml
fastapi002/api/routers/: task.py
fastapi002/api/schemas/: task.py
flask001/: README.md  app.py
flask001/template/: base.html
